--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
 </head>
 <body>
   <main>
-    <div>
+    <div class="container">
 
       <h1>
         Exercício 07
       </h1>
-      <form>
-        <input type="number" placeholder="Digite numero A" required>
-        <input type="number" placeholder="Digite numero B" required>
-        <button>Enviar número</button>
-      </form>
 
-      <p class="message"></p>
+      <div class="forms-container">
+        <img src="./images/imagem-formulario.jpg" alt="imagem de um escritório">
+        <form id="formulario-numero">
+          <input id="input-value-a" type="number" placeholder="Digite numero A" required>
+          <input id="input-value-b" type="number" placeholder="Digite numero B" required>
+          <button id="btn-send-number" type="submit">Enviar número</button>
+          <p class="message"></p>
+        </form>
+  
+      </div>
 
     </div>
   </main>
